# StoneDB

./: .gitignore  Cargo.toml  README.md
docs/: index.md  language.md
docs/ADR/: 2024_03_01_selection_of_protocols.md  2024_03_01_writing_data_to_disk.md
pkgs/server/: Cargo.toml
pkgs/server/src/: clock.rs  engine.rs  interpreter.rs  main.rs
pkgs/server/temporary/: Settings.toml
pkgs/server/tests/: main.rs
src/: main.rs
tests/: simple.py
